# zig-zephyr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org  ZBuild.zig  build.zig  gen_dts_zig.py  zephyr-sdk-gcc  zig.cmake  zig_build_obj  zigc++  zigcc
ZBuild/: Board.zig  BufStr.zig  DeviceTree.zig  kconfig.zig  str.zig
cmake/bintools/gnu/: target.cmake
cmake/compiler/gcc/: generic.cmake
cmake/compiler/zig/: compiler_flags.cmake  target.cmake  zig-target.cmake
cmake/linker/ld/: target.cmake
cmake/toolchain/zig/: generic.cmake  target.cmake
src/: c.zig  main.c  main.zig
